<resources>
    <string name="app_name">Rapidine</string>
    <string name="title_activity_main">RapiDine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_bottom_navigation">Bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--<string name="menu_send">Send</string>-->


    <string name="check_internet">Check your internet connection!</string>
    <string name="invalid_password">Invalid Username Or Password</string>
    <string name="too_slow">Internet connection too slow</string>
    <string name="no_internet_access">Internet access not available, Please try again later</string>


    <string name="facebook_app_id">2426772947567136</string>
    <string name="fb_login_protocol_scheme">fb2426772947567136</string>
    <string name="convenience_fee">Convenience Fee:</string>
    <string name="subtotal">ITEM TOTAL:</string>
    <string name="gst">GST:</string>
    <string name="vat">VAT:</string>
    <string name="discount">Discount:</string>
    <string name="total_payable">TOTAL PAYABLE:</string>
    <string name="no_record_found">No Record Found</string>


</resources>
